--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^4.13.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "owl.carousel": "^2.3.4",
     "rxjs": "^5.5.6",
     "ts-md5": "^1.2.4",
     "zone.js": "^0.8.19"
